@@ -1,5 +1,11 @@
 1999-10-19  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
 
+	* docs/Makefile.am (UNFINISHED_MANUALS): New variable.
+	(EXTRA_DIST): Added $(UNFINISHED_MANUALS).
+	* docs/new-grub.texi: New file.
+	
+1999-10-19  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
+
 	* docs/Makefile.am (man_MANS): Added mbchk.1.
 	[MAINTAINER_MODE] (mbchk.1): New target.
 	* docs/mbchk.1: New file. Generated by help2man.
